--- a/src/app/dashboard-page/dashboard-pages/home-dashboard-page/freelacer-achives/freelacer-achives.component.scss
+++ b/src/app/dashboard-page/dashboard-pages/home-dashboard-page/freelacer-achives/freelacer-achives.component.scss
@@ -1,16 +1,16 @@
 .wrapper {
   margin-top: 34px;
-  background: #FFFFFF;
+  background: #ffffff;
   box-shadow: 0px 0px 21px rgba(128, 152, 213, 0.074983);
   border-radius: 4px;
   padding-bottom: 26px;
 
-  &>* {
+  & > * {
     font-family: Source Sans Pro, sans-serif;
   }
 
   h4 {
-    background: #F4F7FC;
+    background: #f4f7fc;
     border-radius: 4px 4px 0px 0px;
     font-style: normal;
     font-weight: normal;
@@ -18,7 +18,7 @@
     line-height: 24px;
     letter-spacing: 0.15px;
     text-transform: uppercase;
-    color: #323C47;
+    color: #323c47;
     padding-top: 25px;
     position: relative;
     padding: 25px 20px;
@@ -33,12 +33,29 @@
       cursor: pointer;
       border: none;
       box-shadow: none;
-
     }
+  }
+  .zero:after {
+    background-image: url(/assets/images/icons/achives/zero.png);
+  }
+
+  .start:after {
+    background-image: url(/assets/images/icons/achives/beginer.png);
+  }
+
+  .middle:after {
+    background-image: url(/assets/images/icons/achives/middle.png);
+  }
+
+  .pro:after {
+    background-image: url(/assets/images/icons/achives/pro.png);
+  }
+  .master:after {
+    background-image: url(/assets/images/icons/achives/master.png);
   }
 
   .main-status {
-    padding: 0 20px;
+    padding: 0 30px;
 
     p {
       margin-top: 28px;
@@ -46,7 +63,7 @@
       font-weight: normal;
       font-size: 14px;
       line-height: 24px;
-      color: #33596E;
+      color: #33596e;
       opacity: 0.5;
     }
 
@@ -60,18 +77,25 @@
         width: 48px;
         height: 100%;
         border-radius: 50%;
-        background-color: #4285F4;
         position: relative;
         z-index: 5;
-
+        background: #68a1ff;
+        box-shadow: 0px 8px 8px rgba(86, 124, 255, 0.25);
+        &.done {
+          background: #1565d8;
+          box-shadow: 0px 8px 8px rgba(86, 124, 255, 0.35);
+        }
         span {
           font-style: normal;
-          font-weight: normal;
-          font-size: 10px;
+          font-weight: 600;
+          font-size: 13px;
+          line-height: 20px;
           text-transform: uppercase;
-          color: #728096;
+          color: #323c47;
           position: absolute;
-          bottom: -17px;
+          bottom: -35px;
+          left: 50%;
+          transform: translateX(-50%);
 
           &:nth-child(2) {
             left: 55%;
@@ -81,7 +105,7 @@
 
         &:after {
           position: absolute;
-          content: '';
+          content: "";
           width: 100%;
           height: 100%;
           top: 50%;
@@ -89,57 +113,22 @@
           transform: translate(-50%, -50%);
           background-repeat: no-repeat;
           background-position: center;
-
-        }
-
-        &.start:after {
-          background-image: url(/assets/images/icons/achives/beginer.png);
-        }
-
-        &.middle:after {
-          background-image: url(/assets/images/icons/achives/middle.png);
-        }
-
-        &.pro:after {
-          background-image: url(/assets/images/icons/achives/pro.png);
         }
       }
 
       .line {
-        height: 1px;
+        height: 7px;
         position: absolute;
         width: 96%;
-        background-color: #BDC3C7;
+        background-color: #dce4ff;
         top: 50%;
         left: 50%;
-        transform: translateX(-50%);
-
+        transform: translate(-50%, -50%);
+        overflow: hidden;
         .position {
           position: absolute;
           height: 100%;
-          background: #4285F4;
-
-          &:after {
-            position: absolute;
-            content: '';
-            width: 2px;
-            height: 34px;
-            right: 2px;
-            top: 50%;
-            transform: translateY(-50%);
-            background: #507BFC;
-          }
-
-          span {
-            position: absolute;
-            top: -42px;
-            right: -20px;
-            font-style: normal;
-            font-weight: normal;
-            font-size: 14px;
-            line-height: 18px;
-            color: #507BFC;
-          }
+          background: #4285f4;
         }
       }
     }
@@ -148,96 +137,235 @@
   .all-achive-types {
     width: 100%;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     flex-wrap: wrap;
-    margin-top: 46px;
     justify-content: space-between;
-    padding: 0 20px;
+    padding: 0 30px;
 
-    .achive-el {
-      width: 48%;
-      margin-bottom: 15px;
-      display: flex;
-      align-items: flex-start;
+    h6 {
+      margin: 100px auto 40px;
+      font-family: Source Sans Pro, sans-serif;
+      font-style: normal;
+      font-weight: bold;
+      font-size: 24px;
+      line-height: 27px;
+      text-align: center;
+      color: #323c47;
+    }
 
-      p {
-        font-style: normal;
-        font-weight: normal;
-        font-size: 14px;
-        line-height: 20px;
-        color: #728096;
-      }
+    .skills-level {
+      width: 100%;
+      position: relative;
 
-      &>div {
-        display: flex;
-        align-items: flex-start;
-      }
-
-      .detail-achive-line {
-        // margin-left: 10px;
-        align-items: center;
-
-        .line {
-          margin-right: 8px;
-          width: 170px;
-          height: 7px;
-          background: #BDC3C7;
-          border-radius: 2px;
-          position: relative;
-
-          span {
-            position: absolute;
-            display: block;
-            top: 0;
-            left: 0;
-            height: 100%;
-            background: #5DDFA9;
-            border-radius: 2px;
+      .btns {
+        position: absolute;
+        width: 30px;
+        height: 30px;
+        background: #1565d8;
+        box-shadow: 0px 10px 20px rgba(80, 123, 252, 0.5);
+        border-radius: 50%;
+        top: 50%;
+        transform: translateY(-50%);
+        cursor: pointer;
+        z-index: 20;
+        &:before {
+          position: absolute;
+          content: "";
+          top: 50%;
+          left: 50%;
+          background-image: url(/assets/images/icons/white-chevron-right.png);
+          background-size: cover;
+          height: 13px;
+          width: 6px;
+          transform: translate(-50%, -50%);
+        }
+        &.next {
+          right: -15px;
+        }
+        &.prev {
+          left: -15px;
+          &:before {
+            transform: translate(-50%, -50%) rotate(180deg);
           }
         }
-
-        .current-val {
-          font-style: normal;
-          font-weight: normal;
-          font-size: 14px;
-          line-height: 20px;
-          color: #728096;
+      }
+    }
+    .slides {
+      overflow: hidden;
+      width: 100%;
+    }
+    .skills-level-items {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      // overflow: hidden;
+      // width: 100%;
+      &:not(.blocked) {
+        transform: translateX(-50.4%);
+        &.prev {
+          transform: translateX(0);
+          transition: all 0.5s ease-in-out;
+        }
+        &.next{
+          transform: translateX(-50.4%);
+          transition: all 0.5s ease-in-out;
         }
       }
-
     }
 
-    .icon {
-      display: block;
-      width: 26px;
-      height: 26px;
-      border-radius: 50%;
-      position: relative;
-      background: #BDC3C7;
-      margin-right: 14px;
-
-      &:before {
-        position: absolute;
-        content: '\e906';
-        font-family: icomoon;
-        font-size: 9px;
-        color: #fff;
-        left: 50%;
-        top: 50%;
-        transform: translate(-50%, -50%);
+    .skill {
+      box-sizing: border-box;
+      min-width: 49.5%;
+      width: 49.5%;
+      background: #ffffff;
+      border: 1px solid #dce4ff;
+      box-sizing: border-box;
+      border-radius: 10px;
+      padding: 28px 46px 38px;
+      margin-right: 10px;
+      .skill-title {
+        font-style: normal;
+        font-weight: bold;
+        font-size: 18px;
+        line-height: 20px;
+        color: #323c47;
+        display: flex;
+        align-items: center;
+        margin-bottom: 52px;
+        .icon {
+          width: 48px;
+          height: 48px;
+          border-radius: 50%;
+          position: relative;
+          background: #68a1ff;
+          display: block;
+          margin-right: 16px;
+          &.done {
+            background: #1565d8;
+          }
+          &:after {
+            position: absolute;
+            content: "";
+            width: 100%;
+            height: 100%;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            background-repeat: no-repeat;
+            background-position: center;
+          }
+        }
       }
+      .skill-checkpoints {
+        display: flex;
+        flex-direction: column;
+        .checkpoint {
+          padding-right: 75px;
+          display: flex;
+          flex-direction: column;
+          &:not(:first-of-type) {
+            border-top: 1px solid rgba(220, 228, 255, 0.7);
+            padding-top: 15px;
+          }
+          &:not(:last-of-type) {
+            padding-bottom: 22px;
+          }
+          .name {
+            display: flex;
+            justify-content: space-between;
+            span {
+              &:first-child {
+                font-weight: 600;
+                font-size: 16px;
+                line-height: 20px;
+                color: #323c47;
+              }
+              &:last-child {
+                font-size: 16px;
+                line-height: 20px;
+                color: #728096;
+              }
+            }
+          }
+          .checkpoint-progress {
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            align-items: center;
+            margin-top: 16px;
+            .status {
+              min-width: 26px;
+              width: 26px;
+              height: 26px;
+              max-height: 26px;
+              border-radius: 50%;
+              position: relative;
 
-      &.full {
-        background: #4285F4;
+              &:before {
+                position: absolute;
+                content: "";
+                width: 100%;
+                height: 100%;
+                top: 0;
+                left: 0;
+                border-radius: 50%;
+                border: 1px solid #4285f4;
+              }
+              &.done {
+                &:before {
+                  background-color: #4285f4;
+                  border: none;
+                }
+                &:after {
+                  position: absolute;
+                  content: "\e901";
+                  font-family: icomoon;
+                  font-size: 8px;
+                  color: #fff;
+                  top: 50%;
+                  left: 50%;
+                  transform: translate(-50%, -50%);
+                }
+              }
+            }
+            .current {
+              font-size: 16px;
+              line-height: 20px;
+              color: #323c47;
+              margin-left: 10px;
+              margin-right: 20px;
+            }
+            .line {
+              width: 100%;
+              height: 7px;
+              background: #dce4ff;
+              border-radius: 2px;
+              position: relative;
+              .line-progress {
+                position: absolute;
+                height: 100%;
+                background: #5ddfa9;
+                border-radius: 2px;
+              }
+            }
+
+            .target {
+              font-size: 16px;
+              line-height: 20px;
+              color: #323c47;
+              margin-left: 10px;
+            }
+
+            &.zero {
+              .line .line-progress {
+                width: 100%;
+              }
+            }
+          }
+        }
       }
-    }
-
-    p {
-      margin: 0;
-      width: 240px;
     }
   }
-
 }
 
 // e906
