--- a/src/app/shared/modules/star-rating/star-rating.component.html
+++ b/src/app/shared/modules/star-rating/star-rating.component.html
@@ -1,3 +1,3 @@
-<div class="rating" *ngIf="currentRating">
+<div class="rating">
     <fa-icon *ngFor="let n of starArray, let i = index" [icon]="n"></fa-icon>
 </div>
