--- a/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/general-user-settings/location-language-user-settings/location-language-user-settings.component.html
+++ b/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/general-user-settings/location-language-user-settings/location-language-user-settings.component.html
@@ -7,29 +7,40 @@
 
       <div class="field-block">
         <h5 class="fields-title">Страна</h5>
-        <input class="fields-value" type="text" [(ngModel)]="userSettings.country">
+        <input class="fields-value" type="text" knifeAlphanumeric [(ngModel)]="userSettings.country">
       </div>
 
       <div class="field-block">
         <h5 class="fields-title">Город</h5>
-        <input class="fields-value" type="text" [(ngModel)]="userSettings.city">
+        <input class="fields-value" type="text" knifeAlphanumeric [(ngModel)]="userSettings.city">
       </div>
 
       <div class="field-block-multiple">
 
         <div class="single-lang-wrapper" *ngFor="let arrayItem of userSettings.language; let i = index">
 
-          <div class="field-block">
+          <!-- <div class="field-block"  *ngIf="userSettings.language">
             <h5 class="fields-title">Язык</h5>
-            <input class="fields-value" type="text" [(ngModel)]="userSettings.language[i].langName" [ngClass] = "{not_Valid: !langName.valid}"  #langName="ngModel" maxlength="15" required minlength="4">
+            <input class="fields-value" 
+              type="text" 
+              knifeAlphanumeric 
+              [(ngModel)]="userSettings.language[i].langName" 
+              #langName="ngModel" 
+              maxlength="15"
+              minlength="4"  
+              required
+              [ngClass] = "{not_Valid: !langName.valid}">
             <div *ngIf="!langName.valid" class="alert-danger">
               <p>specialty must be at least 4 characters long.</p>
             </div>
-          </div>
+          </div> -->
 
           <div class="field-block language-level">
             <label class="block-title" for="langLevel">Уровень владения</label>
-            <mat-select name="langLevel" id="langLevel" [(ngModel)]="userSettings.language[i].langLevel">
+            <mat-select 
+              name="langLevel" 
+              id="langLevel" 
+              [(ngModel)]="userSettings.language[i].langLevel">
               <ng-container *ngFor="let langLevel of languagesLevel">
                 <mat-option [value]="langLevel">{{ languageTranslates[langLevel-1] }}</mat-option>
               </ng-container>
