--- a/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/home-user-settings.component.scss
+++ b/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/home-user-settings.component.scss
@@ -37,25 +37,45 @@ h1{
     background-color: #3C7EEA;
   }
 }
-::ng-deep.save-all{
-  font-family: "Source Sans Pro", sans-serif;
-  font-style: normal;
-  font-weight: 600;
-  font-size: 14px;
-  line-height: 20px;
-  display: flex;
-  align-items: center;
-  text-align: center;
-  letter-spacing: 1px;
-
-  color: #FFFFFF;
-  background: #3C7EEA;
-  box-shadow: 0px 2px 4px rgba(60, 9, 179, 0.3);
-  border-radius: 4px;
-  border: none;
-  margin: 30px auto 20px;
-  padding: 17px 35px 15px;
-  text-transform: uppercase;
+:host::ng-deep {
+  .fields{
+    position: relative;
+    .alert-danger{
+      background: transparent;
+      font-family: "Source Sans Pro" , sans-serif;
+      font-weight: 600;
+      font-size: 13px;
+      line-height: 16px;
+      color: #FD1F3A;
+      position: absolute;
+    }
+  }
+  .fields-value{
+    outline: none;
+    &.ng-valid[type=text]{
+      border: 1px solid transparent;
+    }
+  }
+  .save-all{
+    font-family: "Source Sans Pro", sans-serif;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 20px;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    letter-spacing: 1px;
+  
+    color: #FFFFFF;
+    background: #3C7EEA;
+    box-shadow: 0px 2px 4px rgba(60, 9, 179, 0.3);
+    border-radius: 4px;
+    border: none;
+    margin: 30px auto 20px;
+    padding: 17px 35px 15px;
+    text-transform: uppercase;
+  }
 }
 
 
