--- a/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/security-user-settings/security-pass-user-settings/security-pass-user-settings.component.html
+++ b/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/security-user-settings/security-pass-user-settings/security-pass-user-settings.component.html
@@ -8,15 +8,15 @@
       <div class="fields">
         <div class="field-wrapper">
           <h5 class="fields-title">Старый пароль</h5>
-          <input class="fields-value" type="text" formControlName='oldPassword' maxlength="50">
+          <input class="fields-value" type="password" formControlName='oldPassword' maxlength="50">
           <div class="succes-message" *ngIf="submitedPassForm && changePasswordResult" >
             Ответ положительный. Пароль изменен
           </div>
-          <div class="error-message" *ngIf="!submitedPassForm && !changePasswordResult && passForm.controls.oldPassword.value" >
+          <div class="error-message" *ngIf="submitedPassForm && !changePasswordResult && passForm.controls.oldPassword.value" >
             Ответ отрицательный. Пароль другой
           </div>
           <div class="error-message" *ngIf="submitedPassForm  && !passForm.controls.oldPassword.value">
-            Ответ отрицательный. Это поле вообще-то обезательное
+            Это обязательное поле
           </div>
         </div>
       </div>
@@ -25,7 +25,7 @@
 
         <div class="fields">
           <h5 class="fields-title">Новый пароль (если необходимо изменить)</h5>
-          <input class="fields-value new-passrord" placeholder="" formControlName="newPassword" required>
+          <input class="fields-value new-passrord" type="password" placeholder="" formControlName="newPassword" required>
           <div class="pass-erorrs">
             <span
               [ngClass]="passForm.get('passwords.newPassword').hasError('required') || passForm.get('passwords.newPassword').hasError('hasNumber') ? 'unvalidated': 'validated'"></span>
@@ -51,18 +51,18 @@
             </ul>
           </div>
           <div class="error-message" *ngIf="submitedPassForm && !passForm.get('passwords.newPassword').value">
-            Ответ отрицательный. Это поле вообще-то обезательное
+            Это обязательное поле
           </div>
         </div>
 
         <div class="fields">
           <h5 class="fields-title">Повторите новый пароль</h5>
-          <input class="fields-value" placeholder="" formControlName="newPassword_confirmation">
+          <input class="fields-value" type="password" placeholder="" formControlName="newPassword_confirmation">
           <div class="error-message" *ngIf="passForm.hasError('notSame', 'passwords')">
-            Ответ отрицательный. Пароли не совпадают
+            Новый пароль не совпадает
           </div>
           <div class="error-message" *ngIf="submitedPassForm && !passForm.get('passwords.newPassword_confirmation').value && !passForm.hasError('notSame', 'passwords')">
-            Ответ отрицательный. Это поле вообще-то обезательное
+            Это обязательное поле
           </div>
         </div>
 
