--- a/src/app/authorization-page/authentification-page/registration-page/registration-page.component.html
+++ b/src/app/authorization-page/authentification-page/registration-page/registration-page.component.html
@@ -40,7 +40,7 @@
             }}</mat-error>
         </mat-form-field>
         <mat-form-field>
-          <mat-label>Повторно введите пароль</mat-label>
+          <mat-label>{{'auth-page.registr.repeat-password' | translate}}</mat-label>
             <input matInput type="password" [type]="hideS ? 'password' : 'text'" formControlName="password_confirmation" required />
             <!-- <button type="button" class="pass" mat-icon-button matSuffix (click)="hideS = !hideS" [attr.aria-label]="'Hide password'"
             [attr.aria-pressed]="hideS" [style.color]="hideS ? '#DBDBDB': '#000'">
