--- a/src/app/shared/modules/inform-popup/inform-popup.component.html
+++ b/src/app/shared/modules/inform-popup/inform-popup.component.html
@@ -2,8 +2,8 @@
   <div class="popup">
     <button class="close" (click)="closeInformPopUp()">×</button>
     <div class="info">
-      <h4>{{ message.title }}</h4>
-      <p>{{ message.description}} </p>
+      <h4>{{ message.title | translate }}</h4>
+      <p>{{ message.description | translate}} </p>
     </div>
   </div>
 </div>
