--- a/src/app/user-page/user-page.component.html
+++ b/src/app/user-page/user-page.component.html
@@ -63,7 +63,7 @@
     </section>
     <section class="switching-user-types">
       <div class="btns-wrapper">
-        <div class="btn btn-user-type" [ngClass]="{active: userTypeFreelancer}" (click)=choseUser(0) >Профиль филансера</div>
+        <div class="btn btn-user-type" [ngClass]="{active: userTypeFreelancer}" (click)=choseUser(0) >Профиль фрилансера</div>
         <div class="btn btn-user-type" [ngClass]="{active: !userTypeFreelancer}" (click)=choseUser(1)>профиль заказчика</div>
       </div>
       <div class="switching-user-types__text">*Каждый пользователь данной биржи может быть одновременно исполнителем и заказчиком, в зависимости от потребности. </div>
